Add diagrammatic assembly models

--- a/_EFGs/M2.1.md
+++ b/_EFGs/M2.1.md
@@ -15,6 +15,10 @@ The epipelagic or euphotic zone of the open ocean is the uppermost layer that is
 
 The epipelagic zone is structured by a strong depth gradient in light. Depth is variable based on local turbidity, but extends to approximately 200m where light attenuates to 1% of surface levels. Interaction at the surface between the ocean and atmosphere leads to increased seasonality, mixing and warming, and makes this the most biologically and physicochemically variable ocean layer. Nutrient levels are highly spatially variable as a result. Salinity varies with terrestrial freshwater inputs, evaporation and mixing, with greater variation in semi-enclosed areas (e.g. Mediterranean Sea) than the open ocean.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 The surface layer of the entire open ocean beyond the near-shore zone.
