--- a/_EFGs/M2.3.md
+++ b/_EFGs/M2.3.md
@@ -18,6 +18,10 @@ These are deep, open-ocean ecosystems in the water column generally between 1000
 
 No light penetrates from the ocean surface to bathypelagic waters. Oxygen concentrations are not limiting to aerobic respiration (mostly 3-7ml.l-1) and are recharged through thermohaline circulation by cooling. Oxygenated water is circulated globally from two zones (Weddel Sea and far North Atlantic Ocean) where ice formation and surface cooling create high salinity oxygenated water that sinks, and is subsequently circulated globally via the ‘great ocean conveyor’. Re-oxygenation frequency varies from 300-1000 years, depending on the circulation route. More local thermohaline circulation occurs by evaporation in the Mediterranean and Red seas, resulting in warm temperatures (13-15°C) at bathyl depths. Otherwise, bathypelagic temperatures vary from -1°C in polar waters to 2-4°C in tropical and temperate waters. Nutrient levels are low and derive from the fall of organic remains from surface horizons. Pressure varies with depth from 100-300 atmospheres.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 
 # Distribution
 
@@ -29,9 +33,11 @@ All oceans or deep seas beyond the continental slope and deeper than 1000m.
 
 Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group.
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Priede, IG (2017) Deep-sea fishes: Biology, diversity, ecology and fisheries. Chapter 1. Cambridge University Press, Cambridge. doi:10.1017/9781316018330
 ### Map References
 * Becker JJ, Sandwell DT, Smith WHF, Braud J, Binder B, Depner J, Fabre D, Factor J, Ingalls S, Kim S-H, Ladner R, Marks K, Nelson S, Pharaoh A, Trimmer R, Von Rosenberg J, Wallace G, Weatherall P (2009) Global Bathymetry and Elevation Data at 30 Arc Seconds Resolution: SRTM30_PLUS, Marine Geodesy 32: 355-371.
-
