--- a/_EFGs/M2.4.md
+++ b/_EFGs/M2.4.md
@@ -18,6 +18,9 @@ These deep, open-ocean ecosystems span depths from 3000 to 6000 metres. Autotrop
 
 No light penetrates from the ocean surface to abyssopelagic waters. Nutrient concentrations are very low and recharge is dependent on organic flux and detrital fall from the epipelagic zone. Oxygen concentrations, however, are not limiting to aerobic respiration (mostly 3-7ml.l-1) and are generally recharged through global thermohaline circulation driven by cooling in polar regions. Water temperatures vary from below zero in polar waters up to 3°C in parts of the Atlantic. Hydrostatic pressure is extremely high (300-600 atm). Currents are weak, salinity is stable and there is little spatial heterogeneity in the water column.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
 
 # Distribution
 
@@ -29,9 +32,11 @@ All oceans and  deepest parts of the Mediterranean Sea  beyond the continental s
 
 Indicative distributions of these marine pelagic ecosystem functional groups were derived from bathymetric spatial data obtained from Becker et al. (2009) using depth range thresholds cited in respective descriptive profiles for each functional group.
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Priede, IG (2017) Deep-sea fishes: Biology, diversity, ecology and fisheries. Chapter 1. Cambridge University Press, Cambridge. doi:10.1017/9781316018330
 ### Map References
 * Becker JJ, Sandwell DT, Smith WHF, Braud J, Binder B, Depner J, Fabre D, Factor J, Ingalls S, Kim S-H, Ladner R, Marks K, Nelson S, Pharaoh A, Trimmer R, Von Rosenberg J, Wallace G, Weatherall P (2009) Global Bathymetry and Elevation Data at 30 Arc Seconds Resolution: SRTM30_PLUS, Marine Geodesy 32: 355-371.
-
