--- a/_EFGs/M3.1.md
+++ b/_EFGs/M3.1.md
@@ -15,6 +15,10 @@ These aphotic heterotrophic ecosystems fringe the margins of continental plates 
 
 The continental slopes are characterised by strong environmental depth gradients in pressure, temperature, light and food. Limited sunlight penetration permits some visual predation but no photosynthesis below 250 m, and rapidly diminishes with depth, with total darkness (excluding bioluminescence) below 1000 m. Hydrostatic pressure increases with depth (1 atm every 10 m). Temperature drastically shifts below the thermocline, from warmer surface waters to cold deep water (1-3 °C), except in the Mediterranean (13°C) and the Red Sea (21°C). Food quantity and quality decreases with increasing depth, as heterotrophic zooplankton efficiently use the labile compounds of the descending particulate organic matter. The sediments on continental slopes provide important ecosystem services, including nutrient regeneration and carbon sequestration.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Fringing the margins of all ocean basins and oceanic islands. Extending beneath 11% of the ocean surface between depths of 250 and 4000 m.
@@ -23,9 +27,11 @@ Fringing the margins of all ocean basins and oceanic islands. Extending beneath 
 
 The indicative map of Continental and island slopes was based on the ‘slope’ geomorphic unit of Harris et al. (2014).
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Menot L, Sibuet M, Carney RS, Levin LA, Rowe GT, Billett DSM et al. (2010) New perceptions of continental margin biodiversity. In: ’Life in the world’s oceans: diversity, distribution and abundance’ (Ed. AD McIntyre), Chapter 5, pp 79-101. Blackwell, Chichester.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
