--- a/_EFGs/M3.2.md
+++ b/_EFGs/M3.2.md
@@ -15,6 +15,10 @@ Submarine canyons are major geomorphic features that function as dynamic flux ro
 
 Submarine canyons vary in their origin, length, depth range (mean 2000 m), hydrodynamics, sedimentation patterns and biota. Their complex topography modifies regional currents, inducing local upwelling, downwelling and other complex hydrodynamic processes (turbidity currents, dense shelf water cascading, internal waves). Through these processes, canyons act as geomorphic conduits of water masses, sediments and organic matter from the productive coastal shelf to deep basins. This is particularly evident in shelf-incising canyons directly affected by riverine inputs and other coastal processes. Complex hydrodynamic patterns enhance nutrient levels and food inputs mostly through downward lateral advection, but also by local upwelling, active biological transport by vertical migration of organisms and passive fall of organic flux of varied particles sizes. Differences among canyons are driven primarily by variation in abundance and quality of food sources, as well as finer scale drivers including the variability of water mass structure (i.e. turbidity, temperature, salinity and oxygen gradients), seabed geomorphology, depth and substratum.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Submarine canyons cover 11.2% of continental slopes, with 9000 large canyons recorded globally. Most of their extent is distributed below 200 m, with a mean depth of 2000 m.
@@ -22,6 +26,9 @@ Submarine canyons cover 11.2% of continental slopes, with 9000 large canyons rec
 ## Map details
 
 The indicative map of Submarine canyons was based on the ‘canyons’ geomorphic unit of Harris et al. (2014).
+
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 ## References
 ### Text references
