--- a/_EFGs/M3.3.md
+++ b/_EFGs/M3.3.md
@@ -15,6 +15,10 @@ This is the largest group of benthic marine ecosystems, extending between 3000 a
 
 No light penetrates to abyssal depths. Hydrostatic pressure is very high (300-600 atm). The water masses above abyssal plains are well oxygenated and characterised by low temperatures (-0.5 to 3°C), except in the Mediterranean (13°C) and the Red Sea (21°C). The main driver of most abyssal communities is food limitation, which mostly arrives to the seafloor as particulate organic carbon, or “marine snow”. Only 0.5 to 2% of the primary production in the euphotic zone reaches the abyssal seafloor, with the quantity decreasing with increasing depth.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Seafloor of all oceans between 3000 and 6000 m depth, accounting for 76% of the total seafloor area, segmented by mid-ocean ridges, island arcs and trenches.
@@ -23,9 +27,11 @@ Seafloor of all oceans between 3000 and 6000 m depth, accounting for 76% of the 
 
 The indicative map of Abyssal plains was based on the ‘plains’ and ‘hills’ classes within the abyssal geomorphic unit of Harris et al. (2014).
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
-* Smith CR, De Leo FC, Bernardino AF, Sweetman AK, Martinez Arbizu P (2008) Abyssal food limitation, ecosystem structure and climate change. Trends in Ecology and Evolution 23: 518-528. 
+* Smith CR, De Leo FC, Bernardino AF, Sweetman AK, Martinez Arbizu P (2008) Abyssal food limitation, ecosystem structure and climate change. Trends in Ecology and Evolution 23: 518-528.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
