--- a/_EFGs/M3.6.md
+++ b/_EFGs/M3.6.md
@@ -1,5 +1,5 @@
 ---
-name: M3.6 Hadal trenches and troughs 
+name: M3.6 Hadal trenches and troughs
 biome: M3 Deep sea floors
 realm: Marine
 code: M3.6
@@ -18,6 +18,10 @@ Hadal zones are the deepest ocean systems on earth and among the least explored.
 
 The hadal benthic zone extends from 6,000 to 11,000 m depth and includes 27 disjunct deep-ocean trenches, 13 troughs and 7 faults. Sunlight is absent, nutrients and organic carbon are scarce and hydrostatic pressure is extremely high (600-1100 atm). The water masses in trenches and troughs are well oxygenated by deep currents and experience constantly low temperatures (1.5-2.5 °C). Rocky substrates outcrop on steep slopes of trenches and faults, while the floors comprise large accumulations of very fine sediment deposited by mass movement, including drift and landslides, which are important sources of organic matter.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 
 # Distribution
 
@@ -29,10 +33,13 @@ A cluster of isolated trenches in subduction zones, faults  and troughs/basins, 
 
 The indicative map of Hadal trenches and troughs was based on the ‘hadal’ and ‘trenches’ geomorphic units of Harris et al. (2014).
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
+
 ## References
 ### Text references
 * Jamieson A, Fujii T, Mayor DJ, Solan M, Priede IG (2010) Hadal trenches: the ecology of the deepest places on Earth. Trends in Ecology and Evolution, 25: 190-197. / Stewart HA, Jamieson AJ (2018) Habitat heterogeneity of hadal trenches: considerations and implications for future studies. Progress in Oceanography 161: 47-65.
-     
+
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
