--- a/_EFGs/M3.7.md
+++ b/_EFGs/M3.7.md
@@ -15,6 +15,10 @@ CBEs include 3 major types of habitats between bathyal and abyssal depths: 1) hy
 
 No light penetrates to deep-sea CBEs. Hydrostatic pressure is very high (30-600 atm). At hydrothermal vents, very hot fluids (up to 400 °C) emanate from chimneys charged with metals and reduced chemicals that provide energy to chemoautotrophic microbes. At cold seeps, the fluids are cold, and reduced chemicals originate both biogenically and abiotically. At food-falls, the reduced chemicals are produced by microorganisms degrading the organic matter of the fall. The main driver of CBEs is the chemosynthetically-based primary productivity and symbiotic relationships between microorganisms and fauna.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Seafloor of all oceans. Vents (map) occur on mid-ocean ridges, back arc basins and active seamounts. Cold seeps occur on active and passive continental margins. Food-falls occur mostly along cetacean migration routes (whale falls).
@@ -22,6 +26,9 @@ Seafloor of all oceans. Vents (map) occur on mid-ocean ridges, back arc basins a
 ## Map details
 
 The indicative map of Chemosynthetic-based ecosystems was based on the distribution of hydrothermal vents on spreading plate boundaries  mapped in ‘Plate lines and polygons’ data by USGS/ESRI. Distribution of cold seeps is poorly known and not mapped.
+
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
 
 ## References
 ### Text references
