--- a/_EFGs/M4.2.md
+++ b/_EFGs/M4.2.md
@@ -15,6 +15,10 @@ Marine aquafarms (mariculture) are localised high-productivity systems within an
 
 Most marine farms are in sheltered coastal waters, but some are in the open ocean or on land in tanks or ponds filled with seawater. Those in marine waters experience currents, tides and flow-through of marine energy, matter and biota characteristic of the surrounding environment. Those on land are more insular, with intensively controlled light and temperature, recirculation systems that filter and recycle water and waste continuously, as well as more intensive anthropogenic inputs of food and nutrients, anti-fouling chemicals, antibiotics and herbicides. Marine enclosures have netting and frames that provide substrates for biofilms and a limited array of benthic organisms, but usually exclude the benthos. Land-based systems have smooth walls and floors that provide limited habitat heterogeneity for benthic biota.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Rapidly expanding around coastal Asia, Europe, North and Meso America, and southern temperate regions. Open ocean facilities near Hawaii and Puerto Rico
@@ -23,9 +27,11 @@ Rapidly expanding around coastal Asia, Europe, North and Meso America, and south
 
 Marine ecoregions (Spalding et al. 2008) containing Marine aquafarms were identified by consulting global and regional reviews, suitability maps (Gentry et al. 2017), and expertise of authors. These were clipped to the extent of the marine ‘shelf’ base layer as mapped by Harris et al. (2014).
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Beveridge M (2008). Cage Aquaculture. Wiley, Oxford.
 ### Map References
 * Spalding MD et al. (2008) Marine ecoregions of the world: a bioregionalization of coastal and shelf areas. Bioscience 57: 573–583. / Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24. / Gentry RR, Froehlich HE, Grimm D, Kareiva P, Parke M, Rust M, Gaines SD, Halpern BS (2017) Mapping the global potential for marine aquaculture. Nature Ecology & Evolution 1: 1317–1324.
-
