--- a/_EFGs/S1.2.md
+++ b/_EFGs/S1.2.md
@@ -18,6 +18,9 @@ Lithic matrices and their microscopic cracks and cavities, host microbial commun
 
 Endolithic systems are characterised by a lack of light, scarcity of nutrients and high pressures at depth. Temperatures vary within the crust from less than 20°C up to 125°C, but show little temporal variation. Chemical properties and physical structure of lithic matrices influence the supply of resources and movement of biota. Stable cratonic massifs have minimal pore space for microbial occupation, which is limited to occasional cracks and fissures. Sedimentary substrates offer more space, but nutrients may be scarce. Basic volcanics and crustal fluids have more abundant nutrients.  Chemical and biogenic weathering occurs through biogenic acids and other corrosive agents. The matrix is mostly stable, but disturbances include infrequent and spatially variable earthquakes and volcanic intrusions.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
 
 # Distribution
 
@@ -33,5 +36,4 @@ Global distribution throughout the earth's crust.
 ### Text references
 * Edwards KJ, Becker K, Colwell F (2012). The deep, dark energy biosphere: intraterrestrial life on earth. Annual Review of Earth and Planetary Sciences 40, 551–568.
 ### Map References
-* 
-
+*
