--- a/_EFGs/S2.1.md
+++ b/_EFGs/S2.1.md
@@ -15,6 +15,11 @@ These low-productivity systems in subterranean, epigenic air-filled voids are cr
 
 Excavations associated with tunnels, vaults and mines. While some are abandoned, others are continually accessed by humans, enhancing connectivity with the surface, resource importation and biotic dispersal. Substrates include a range of rock types, as well as artificial surfaces on linings and debris piles. Air movement varies from still to turbulent (e.g. active train tunnels). Light is absent, except at openings and where artificial sources are maintained by humans, sometimes supporting algae (lamenflora).  Humidity  and temperature are relatively constant, and nutrients are scarce except where enriched by human sources.
 
+
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Scattered worldwide, but mostly associated with urban centres, transit corridors and industrial mines.
@@ -27,5 +32,4 @@ Scattered worldwide, but mostly associated with urban centres, transit corridors
 ### Text references
 * Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52: 473-481. / Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
 ### Map References
-* 
-
+*
