--- a/_EFGs/T1.1.md
+++ b/_EFGs/T1.1.md
@@ -15,6 +15,10 @@ These closed-canopy forests are renowned for their complex structure and high pr
 
 Precipitation exceeds evapotranspiration with low intra- and inter-annual variability, creating reliable year-round rainfall surplus, while closed tree canopies maintain humid microclimate and shade. Warm temperatures exhibit low-moderate diurnal and seasonal variability (minima rarely below 10°C). Soils are moist. but not regularly inundated or peaty (see FT1.3). Most nutrient capital is sequestered in vegetation or cycled through the dynamic litter layer, critical for retaining nutrients that would otherwise be leached or lost to runoff. Decadal regimes of tropical storms occur outside equatorial latitudes (mostly >10°) except in continental America and Africa, and drive cycles of canopy destruction and renewal.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Humid tropical and subtropical regions in central and west Africa, southeast Asia, Oceania, northeast Australia, central and tropical south America and the Caribbean.
