--- a/_EFGs/T1.2.md
+++ b/_EFGs/T1.2.md
@@ -15,6 +15,10 @@ These closed-canopy forests and scrubs have drought-deciduous or semi-deciduous 
 
 Overall water surplus (or small deficit<100 mm), but a substantial seasonal deficit in 'winter' in which little or no rain falls within a 4-7 month period. Warm temperatures (minima rarely below 10°C) with low-moderate diurnal and seasonal variability in the tropics, but greater seasonal variability in subtropical continental areas. Substrates are diverse and generally produce high levels of nutrients. Tropical storms may be important disturbances in some areas but flammability is low due to limited ground fuels.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Seasonally dry tropical and subtropical regions in central and west Africa, Madagascar, southern Asia, north and northern and eastern Australia, the Pacific, central and south America and the Caribbean.
