--- a/_EFGs/T1.3.md
+++ b/_EFGs/T1.3.md
@@ -15,6 +15,10 @@ Closed-canopy evergreen forests on tropical mountains usually have a single-laye
 
 Substantial cloud moisture and high humidity underpin a reliable year-round rainfall surplus over evapotranspiration. Altitudinal gradients in temperature, precipitation and exposure are pivotal in ecosystem structure and function. Frequent cloud cover from orographic uplift and closed tree canopies maintain a moist microclimate and shady conditions. Temperatures are mild-cool, decreasing with altitude but above 0°C in all months of the year, with low-moderate seasonal variability and moderate-high diurnal variability. Landslides are a significant form of disturbance that drives successional dynamics on steep slopes and are exacerbated by extreme rainfall events. Mountains experience elevated UV-B radiation with altitude and are exposed to tropical storms in some regions.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Humid tropical and subtropical regions in east Africa, east Madagascar, southeast Asia, west Oceania, northeast Australia, central and tropical south America.
