--- a/_EFGs/T1.4.md
+++ b/_EFGs/T1.4.md
@@ -15,6 +15,10 @@ Structurally simple evergreen forests with closed to open canopies, typically 5-
 
 These forests experience an overall water surplus, but productivity is limited by deep sandy low-nutrient acidic substrates, which are strongly leached by high rainfall. Most nutrients are retained in vegetation. Downward movement of clay and organic particles through the soil profile results in a deep, white sandy horizon capped by a thin grey surface horizon (typical of podsols), limiting the capacity of the soil to retain nutrients and moisture within the rooting zone. Hence they are prone to interannual droughts, but waterlogging may occur where the water table is close to the surface, resulting in periodic anoxia within the root zone.  Landscape water table gradients result in surface mosaics in which heath forests may be juxtaposed with peat forests (FT1.1) and palustrine wetland systems (FT1.2).
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Scattered through northwest and west Amazonia and southeast Asia, most notably in the Rio Negro catchment and southern Kalimantan. Not known from Africa, but possibly in the Congo region.
