--- a/_EFGs/T2.5.md
+++ b/_EFGs/T2.5.md
@@ -15,6 +15,10 @@ This group includes the tallest forests. They are moist, multi-layered forests i
 
 There is an annual water surplus, but with seasonal variation (peak surplus in winter) and rare major summer deficits associated with inter-annual drought cycles.  Multiple tree layers produce a light diminution gradient and moist micro-climates at ground level. Winters are cool and summers are warm with occasional heat waves that dry out the moist micro-climate and enable periodic fires, which may be extremely intense and consume the canopy. The growing season is 6-8 months; snow is uncommon and short-lived. Soils are relatively fertile, but often limited in Nitrogen.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Temperate southeast and southwest Australia.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Wardell-Johnson G, Neldner J, Balmer J (2017) Wet sclerophyll forests. In 'Australian vegetation' (Ed. DA Keith), pp281-313. Cambridge University Press, Cambridge. / Mac Nally RC (1995) On large-scale dynamics and community structure in forest birds: Lessons from some eucalypt forests of southeastern Australia. Philosophical Transactions of the Royal Society B 350B: 369-79.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
