--- a/_EFGs/T3.2.md
+++ b/_EFGs/T3.2.md
@@ -15,6 +15,10 @@ Sclerophyllous, evergreen shrublands are distinctive ecosystems of humid and sub
 
 A marked summer water deficit and a modest winter surplus is driven by high summer temperatures and evapotranspiration with winter-maximum or aseasonal rainfall patterns Winters are mild. Sandy soil textures exacerbate an overall water deficit. Soils are typically acid, derived from siliceous sand deposits, sandstones or acid intrusives or volcanics, and are low to very low in P, N and mineral cations (though this varies between regions). The climate, soils and vegetation promote summer canopy fires at decadal to multi-decadal intervals. Positive feedbacks between fire and vegetation may be important in maintaining flammability.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mediterranean-type climate regions of Europe, north and south Africa, southern Australia, western North and South America, and occurrences in non-Mediterranean climates in eastern Australia, USA and Argentina.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Keeley JE, Bond WJ, Bradstock RA, Pausas, JG, Rundel PW (2012) Fire in Mediterranean Ecosystems: ecology, evolution and management. Cambridge University Press, Cambridge. / Lamont BB, Keith DA (2017) Heathlands and associated shrublands. In: Australian vegetation. D. A. Keith. Editor, pp339-368. Cambridge University Press, Cambridge.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
