--- a/_EFGs/T3.4.md
+++ b/_EFGs/T3.4.md
@@ -15,6 +15,10 @@ Lichen and shrub-dominated vegetation with very low LAI develops on skeletal roc
 
 Skeletal substrates (e.g. lava pavements, scree slopes, rock outcrops) limit water retention and nutrient capital and increase heat absorption leading to periodically extreme temperatures. Winter temperatures may be cold at high elevation (see also T6.2). High summer temperatures, however, concentrate resources and inflate temperature-sensitivity of biogeochemical processes. Recurring geophysical disturbances such as lava flow, mass movement, geothermal activity, as well as desiccation episodes periodically destroy biomass and reset successional pathways.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Localised areas scattered around the Pacific rim, African Rift Valley, Mediterranean and north Atlantic.
