--- a/_EFGs/T4.4.md
+++ b/_EFGs/T4.4.md
@@ -15,6 +15,10 @@ These structurally simple woodlands have space between open tree crowns and a gr
 
 A water deficit occurs seasonally in summer, driven primarily by peak evapotranspiration under warm-hot temperatures and, in some regions, seasonal (winter-maximum) rainfall patterns. Mean annual rainfall is 350-1000mm. Low winter temperatures and occasional frost and snow may limit the growing season to 6-9 months.  Soils are usually fine-textured and relatively fertile, but nitrogen may be limiting in some areas. Fires burn mostly in the ground layers during the drier summer months at decadal intervals.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Temperate southeast and southwest Australia, Patagonia and Pampas of South America, western and eastern North America, the Mediterranean region and temperate Eurasia.
