--- a/_EFGs/T4.5.md
+++ b/_EFGs/T4.5.md
@@ -15,6 +15,10 @@ Structurally simple tussock grasslands with interstitial forbs occur in subhumid
 
 A strong seasonal water deficit in summer, driven by peak evapotranspiration under warm-hot temperatures, despite an aseasonal or weakly seasonal rainfall pattern. Mean annual rainfall varies from 250mm to 750mm. Cold winter temperatures limit the growing season to 5-7 months, with frost and snow frequent in in continental locations, but summers are warm.  Soils are deep fertile organic, and usually fine-textured. Fires ignited by lightning occur in the drier summer months at subdecadal or decadal intervals.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Western Eurasia, northeast Asia, Midwest North America, Patagonia and Pampas regions of South America, southeast Africa, southeast Australia and southern New Zealand.
