--- a/_EFGs/T5.1.md
+++ b/_EFGs/T5.1.md
@@ -15,6 +15,10 @@ These mixed semi-deserts are dominated by suffrutescent or subsucculent perennia
 
 Semi-desert steppes is associated with fine-textured, non-acid soils of low-moderate fertility, and may contain appreciable levels of magnesium or sodium. Clay particles exchange mineral ions with plant roots and have reverse texture effects on moisture extraction. Semi-desert steppes are not typically fire-prone and occur in temperate arid climates.  Mean annual rainfall (c. 150-300 mm) is 5-50% of  evapotranspiration and has a winter maximum, but large rain events bring interannual pulses of water surplus. Temperatures are highly variable diurnally and seasonally often exceeding 40°C in summer and reaching 0°C in winters but rarely with snow.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Extensive areas across the Sahara, Arabian Peninsula and west Asia, southwest Africa, southern Australia, Argentina and midwest USA.
