--- a/_EFGs/T5.3.md
+++ b/_EFGs/T5.3.md
@@ -1,5 +1,5 @@
 ---
-name: T5.3 Sclerophyll hot deserts and semi-deserts  
+name: T5.3 Sclerophyll hot deserts and semi-deserts
 biome: T5 Deserts and semi-deserts
 realm: Terrestrial
 code: T5.3
@@ -19,6 +19,10 @@ Arid systems dominated by hard-leaved (sclerophyll) vegetation have relatively h
 Resource availability is limited by a large overall water deficit (rainfall <250mm p.a. is 5-50% of potential evapo-transpiration) and acid sandy soils with very low P & N, together with high diurnal and seasonal variation in temperatures. Summers have runs of extreme hot days >40°C and winters have cool nights (~0°C), but rarely with snow. Long dry spells are punctuated by infrequent interannual pulses of water surplus, which drive ecological booms and transient periods of fuel continuity. Fires occur at decadal- or century-scale return intervals when lightning or human ignitions coincide with fuel continuity.
 
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 
@@ -34,4 +38,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Keith DA (2004) Ocean shores to desert dunes: the native vegetation of NSW and the ACT. NSW Department of Environment and Conservation, Sydney. / Morton S, Stafford Smith DM, Dickman CR, Dunkerley DL, Friedel MH, McAllister RRJ, Reid RW, Roshier DA, Smith MA, Walsh FJ, Wardle GM, Watson IW, Westoby M (2011) A fresh framework for the ecology of arid Australia. Journal of Arid Environments 75: 313-329.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
