--- a/_EFGs/T5.4.md
+++ b/_EFGs/T5.4.md
@@ -15,6 +15,10 @@ In these arid systems productivity is limited by both low precipitation and cold
 
 Mean annual precipitation is similar to most warm deserts (<250mm) due to rainshadows and continentality, however, in cool deserts this falls mainly as snow or sleet in winter, rather than rain. Although evapotranspiration is less severe than in hot deserts, a substantial water deficit exists due to low precipitation (mostly 10-50% of evapotranspiration) and strong desiccating winds that may occasionally propagate fires. Mean monthly temperatures may fall below -20°C in winter, freezing the soil surface and exceed 15°C in summer. Substrates vary from stony plains and uplands to extensive dunefields, with mosaics of clay and sandy regolith underpinning landscape-scale heterogeneity. Large regions were submerged below seas or lakes in past geological eras, with internal drainage systems leaving significant legacies of salinity in some lowland areas, especially in clay substrates.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Cool temperate plains and plateaus from sea level to 4000m elevation in central Eurasia, western North America, Patagonia. Extreme cold deserts are placed in the polar/alpine biome.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Johnson SL, Kuske CR, Carney TD, Housman DC, Gallegos-Graves LV, Belnap J (2012) Increased temperature and altered summer precipitation have differential effects on biological soil crusts in a dryland ecosystem. Global Change Biology 18: 2583-2593. / West NE (1983) Comparisons and contrasts between the temperate deserts and semi-deserts of three continents. In:  Ecosystems of the World vol. 5: Temperate deserts and semi-deserts (Ed. NE West). Elsevier, Amsterdam.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
