--- a/_EFGs/T5.5.md
+++ b/_EFGs/T5.5.md
@@ -15,6 +15,10 @@ Hyper-arid deserts are extremely low productivity and low biomass systems, limit
 
 Extreme rainfall deficit arising from very low rainfall (150mm to almost zero and <5% of potential evapotranspiration), exacerbated by extremely hot temperatures and desiccating winds. Principal sources of moisture may include moisture-laden fog, highly irregular interannual or decadal rainfall events, and capillary rise from deep water tables.  UV-B radiation is extreme except where moderated by fogs. Temperatures exhibit high diurnal and seasonal variability, with extreme summer maxima and sub-zero winter night temperatures. Hyper-arid deserts occur on extensive peneplains and mountainous terrain. Substrates may be extensive sheets of unstable shifting sand or stony gibber with no soil profile development and low levels of nutrients.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Driest parts of the Sahara-Arabian, Atacama and Namib deserts in subtropical latitudes.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Zablocki O, Adriaenssens EM, Cowan D (2016) Diversity and ecology of viruses in hyperarid desert soils. Applied and Environmental Microbioly 82: 770 –777. / Rundel P W, Dillon MO, Palma B, Mooney HA, Gulmon SL, Ehleringer JR (1991) The phytogeography and ecology of the coastal Atacama and Peruvian deserts. Aliso 13(1): 2.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
