--- a/_EFGs/T6.3.md
+++ b/_EFGs/T6.3.md
@@ -15,6 +15,10 @@ These low productivity autotrophic ecosystems are limited by winter dormancy dur
 
 Winters are very cold and dark and summers define short, cool growing seasons with long hours of low daylight. Precipitation falls as snow which persists through winter months. In most areas, there is an overall water surplus, occasionally with small summer deficit, but some areas are ice-free polar deserts that are extremely dry (annual precipitation <150mm p.a.) with desiccating winds. Substrates are peaty or gravelly permafrost, which may partially thaw on the surface in summer, causing cryoturbation.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Primarily the within Arctic Circle and adjacent Subarctic regions, with smaller occurrences on Subantarctic islands and the Antarctic coast.
