--- a/_EFGs/T6.5.md
+++ b/_EFGs/T6.5.md
@@ -19,6 +19,10 @@ Treeless mountain systems dominated by an open to dense cover of cold-tolerant C
 Cold nights (as low as -10°C) and mild days (up to 15°C) produce low mean temperatures and diurnal freeze/thaw cycles, but seasonal temperature range is small and freezing temperatures are short-lived. Cloud cover and precipitation are aseasonal in equatorial latitudes or seasonal in the monsoonal tropics. Strong orographic effects result in an overall precipitation surplus and snow and fog are common, but desiccating conditions may occur during intervals between precipitation events, with morning insolation also increasing moisture stress when roots are cold. Exposure to UV-B radiation is very high. Substrates are typically rocky and shallow with low moisture retention capacity, and exposed to solifluction. However, microtopographic heterogeneity influences fine-scale spatial variation in moisture availability. Steep slopes are subjected to periodic mass movements, which destroy surface vegetation. Low intensity fires may be ignited by lightning or spread upslope from lowland savannas, but occur infrequently at multi-decadal intervals.
 
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 
@@ -34,4 +38,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 *    Smith AP, Young TP (1987) Tropical alpine plant ecology.  Annual Review of Ecology and Systematics 18: 137-58.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
