--- a/_EFGs/T7.1.md
+++ b/_EFGs/T7.1.md
@@ -15,6 +15,10 @@ Structurally simple, very low-diversity, high-productivity annual croplands are 
 
 High to moderate natural availability of water (from at least seasonally high rainfall) and nutrients (from fertile soils) is supplemented by human inputs via irrigation, landscape drainage modifications (surface earthworks) and/or fertiliser application by humans. Temperatures are mild to warm, at least seasonally. These systems are typically associated with flat to moderate terrain, accessible by machinery. Artificial disturbance regimes (e.g. annual ploughing) maintain soil turnover, aeration, nutrient release and relatively low soil organic carbon.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Tropical to temperate humid climatic zones or river flats in dry climates across south sub-Saharan and far north Africa, Europe, Asia, southern and southwestern Australasia, Oceania and the Americas.
