--- a/_EFGs/T7.2.md
+++ b/_EFGs/T7.2.md
@@ -15,6 +15,10 @@ Structurally simple, low-diversity, high-productivity pastures are, maintained b
 
 High to moderate natural availability of water (from rainfall) and nutrients (from soil fertility) is supplemented by human inputs via water management, landscape drainage modifications (surface earthworks) and/or fertiliser application by humans. Temperatures are mild to warm, at least seasonally. Typically associated with moderately fertile substrates and flat to undulating terrain, accessible by machinery. Artificial disturbance regimes (e.g. ploughing up to 5years/decade), maintaining soil turnover, aeration and nutrient release.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mostly in subtropical to temperate climatic zones and developed countries across Europe, east and south Asia, subtropical and temperate Africa, southern Australasia, north and central America and temperate south America.
