--- a/_EFGs/T7.4.md
+++ b/_EFGs/T7.4.md
@@ -15,6 +15,10 @@ Dominated by high densities of humans, these systems are structurally complex an
 
 Humans influence availability of water, nutrients and energy deterministically through governance systems for resource importation and indirectly through interactions and feedbacks. Light is artificially enhanced at night. Urban temperature regimes are elevated by anthropogenic conversion of chemical energy to heat and absorption of solar energy by buildings and paved surfaces. However, temperatures may be locally ameliorated within buildings. Surface water runoff is enhanced and percolation is reduced by sealed surfaces. Recurring disturbances derive from socio-economic processes that drive infrastructure development and renewal, as well as natural disasters (storms, floods, earthquakes, tsunami). There is frequent movement of humans and associated biota and matter between cities.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Extensively scattered through equatorial to subpolar latitudes from sea-level to submontane altitudes, mostly in proximity to the coast, rivers or lakes, especially north America, western Europe and Japan, as well as India, China and Brazil.
