--- a/_EFGs/M2.5.md
+++ b/_EFGs/M2.5.md
@@ -15,6 +15,10 @@ The seasonally frozen surface of polar oceans, ~ 1 - 2m (Antarctic) or 2 – 3 m
 
 Sea ice is integral to the global climate system and has a crucial influence on pelagic marine ecosystems and biogeochemical processes. It limits atmosphere/ocean gas and momentum exchanges; regulates sea temperature; reflects solar radiation; acquires snow cover; and redistributes freshwater to lower latitudes. The annual retreat of sea ice during spring and summer initiates high phytoplankton productivity at the marginal ice zone, and provides a major resource for grazing zooplankton including krill. Polynyas, where areas of low ice concentration are bounded by high ice concentrations, have very high productivity levels. Most sea ice is pack ice transported by wind and currents. Fast ice forms a stationary substrate anchored to the coast, icebergs, glaciers and ice shelves, and can persist for decades.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Arctic Ocean 0 to 45°N (Japan) or only to 80°N (Spitsbergen). Southern Ocean from ~ 55 to 70°S. At maximum extent sea ice covers ~5% of the Northern Hemisphere and 8% of the Southern Hemisphere.
@@ -23,9 +27,11 @@ Arctic Ocean 0 to 45°N (Japan) or only to 80°N (Spitsbergen). Southern Ocean f
 
 Indicative distributions of Sea ice were obtained from Fetterer et al. (2017). To approximate the maximum annual global extent, we used the monthly extent for March 2019 for the northern hemisphere, and the monthly extent for September 2018 for the southern hemisphere.
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Brierley AS, Thomas DN (2002) Ecology of Southern Ocean pack ice. Advances in Marine Biology 43: 171-276. Academic Press. / Arrigo KR, Thomas DN (2004) Large scale importance of sea ice biology in the Southern Ocean. Antarctic Science 16: 471-486. / Horner R., Ackley, SF, Dieckmann GS, Gulliksen B, Hoshiai T, Legendre L, Melnikov IA, Reeburgh WS, Spindler M, Sullivan CW, (1992) Ecology of sea ice biota. Polar Biology 12: 417-427.
 ### Map References
 * Fetterer F, Knowles K, Meier WN, Savoie M, Windnagel AK (2017) Sea Ice Index, Version 3. Monthly Sea Ice Extent. Boulder, Colorado USA. NSIDC: National Snow and Ice Data Center. https://doi.org/10.7265/N5K072F8. [updated daily, Accessed September 2019].
-
