--- a/_EFGs/M3.4.md
+++ b/_EFGs/M3.4.md
@@ -15,6 +15,10 @@ Seamounts, plateaus and ridges are major geomorphic features of the deep oceanic
 
 Seamounts, rising more than 1000 m above the sediment-covered seabed, and smaller peaks, knobs and hills are topographically-isolated features, mostly of volcanic origin. Mid-ocean ridges are semi-continuous mountain chains that mark the spreading margins of adjacent tectonic plates. These prominent topographic formations interact with water masses and currents, increasing turbulence, mixing, particle retention, and upward movement of nutrients from large areas of the seafloor. This enhances productivity on the seamounts and ridges themselves, and also in the euphotic zone above, some of which returns to the system through detrital fallout. A diversity of topographic, bathymetric and hydrodynamic features and substrate types (i.e. steep rocky walls, flat muddy areas, biogenic habitats at varied depths) contribute to niche diversity, and thus biodiversity. Major bathymetric clines associated with elevated topography produce gradients that shape ecological traits including species richness, community structure, abundance, biomass and trophic modes.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 About 171000 seamounts, knolls and hills documented so far worldwide cover c. 2.6% of the seafloor. Ridges cover about 9.2% of the seafloor, along a semi-continuous system 55,000 km long.
@@ -23,9 +27,11 @@ About 171000 seamounts, knolls and hills documented so far worldwide cover c. 2.
 
 The indicative map of Seamounts, ridges and plateaus was based on the ‘seamounts’, ‘ridges’ and ‘plateaus’ geomorphic units of Harris et al. (2014).
 
+{% capture map_det %}  {% endcapture %}
+{% include MAP.html %}
+
 ## References
 ### Text references
 * Rogers AD (2018) The Biology of Seamounts: 25 Years on. Advances in Marine Biology 79:137-224. doi: 10.1016/bs.amb.2018.06.001 / Schlacher A, Rowden AA, Dower JF, Consalvey M (2010) Recent advances in seamount ecology: A contribution to the Census of Marine Life. Marine Ecology (special issue) 31: 1-241.
 ### Map References
 * Harris PT, Macmillan-Lawler M, Rupp J, Baker EK (2014) Geomorphology of the oceans. Marine Geology 352: 4-24.
-
