--- a/_EFGs/S1.1.md
+++ b/_EFGs/S1.1.md
@@ -15,6 +15,10 @@ Dark subterranean air-filled voids support simple, low productivity systems. . T
 
 Most caves form from chemical weathering of limestone or gypsum, either epigenically from surface waters or hypogenically from phreatic waters. Caves also derive from lava tubes and other substrates. Characteristics include the absence of light except at openings, low variability in temperature and humidity, and scarcity of nutrients. High physical fragmentation of cave substrates limits biotic connectivity and promotes insular evolution in stable conditions.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Scattered worldwide, but mostly northern hemisphere, in limestones (map), basalt flows and rarely other lithic substrates.
@@ -25,7 +29,6 @@ Distributions of Aerobic caves were based on mapped area of carbonate rock outcr
 
 ## References
 ### Text references
-* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52, 473-481. / Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht. 
+* Gibert J, Deharveng L (2002) Subterranean ecosystems: a truncated functional biodiversity. BioScience 52, 473-481. / Engel AS (2010) Microbial diversity of cave ecosystems. In: Geomicrobiology: Molecular and environmental perspective (Eds. LL Barton, M Mandl, A Loy), pp219-238. Springer, Dordrecht.
 ### Map References
 * Williams P, Ting Fong Y (2016) World map of carbonate rock outcrops v3.0. The University of Auckland, Auckland. [https://www.fos.auckland.ac.nz/our_research/karst/]
-
