--- a/_EFGs/T2.1.md
+++ b/_EFGs/T2.1.md
@@ -15,6 +15,10 @@ Evergreen, structurally simple forests and woodlands in cold climates are domina
 
 These systems are driven by large seasonal temperature ranges, cold winters with prolonged winter snow, low light, short growing seasons (1-3 months averaging above 10°C) and severe post-thaw frosts. There is an overall water surplus, but annual precipitation can be <200mm. Soil moisture recharged by winter snow sustains the system through evapotranspiration peaks in summer, but moisture can be limiting where these systems extend to mountains in warm semi-arid latitudes. The acid soils usually accumulate peat, and upper horizons may be frozen in winter. The forests may be prone to lightning-induced canopy fires on century time scales and surface fires on multi-decadal scales.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Boreal distribution across Eurasia and North America, extending to temperate (rarely subtropical) latitudes on mountains.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Bonan GB, Shugart HH (1989) Environmental Factors and Ecological Processes in Boreal Forests. Annual Review of Ecology and Systematics 20: 1-28. / Crawford RMM (2013) Tundra-taiga biology. Ch 5. Oxford University Press, Oxford. / Larsen JA (1980) The boreal ecosystem. Academic Press, New York.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
