--- a/_EFGs/T2.2.md
+++ b/_EFGs/T2.2.md
@@ -18,6 +18,9 @@ contributors: DA Keith / NA Brummitt / F Essl / D Faber-Langendoen,
 
  Phenological processes in these forests are driven by large seasonal temperature ranges, (mean winter temperatures <-1°C, summer means  up to 22°C), typically with substantial winter snow and limited growing season, with 4-6 months above 10°C, and severe post-thaw frosts. Fertile soils, especially with high N levels, and an overall water surplus, support deciduous leaf turnover. Fires are generally uncommon.
 
+# Diagramatic assembly model
+
+ {% include DAM.html %}
 
 # Distribution
 
@@ -34,4 +37,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Röhrig E, Ulrich B (1991) Temperate deciduous forests. Ecosystems of the world. Vol. 7. Elsevier, Amsterdam.  / Box EO, Fujiwara K (2015) Warm temperate deciduous forests. Springer, Cham.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
