--- a/_EFGs/T2.4.md
+++ b/_EFGs/T2.4.md
@@ -15,6 +15,10 @@ contributors: DA Keith / NA Brummit / D Faber-Langendoen
 
 The environmental niche of these forests is defined by a modest overall water surplus with no distinct dry season, albeit moderate summer water deficits in some years. Mean annual rainfall is typically 1200-2500 mm, but topographic mesoclimates (sheltered gullies, orographic processes) sustain reliable moisture at some sites. Temperatures are mild with moderate seasonality and a growing season of 6-8 months, and frosts are rare. Substrates may be acidic with high levels of Al and Fe that limit uptake of nutrients. These forests are typically not flammable due to their moist microclimates, but may be embedded in fire-prone landscapes.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Patchy warm temperate distribution 26-43° latitude, north or south of the Equator (east Asia, southeast Australia, New Zealand, southeast USA, Mexico, central Chile, South Africa and the Azores).
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Grubb PJ, Bellingham PJ, Kohyama TS, Piper FS Valido A (2013) Disturbance regimes, gap-demanding trees and seed mass related to tree height in warm temperate rain forests worldwide. Biol. Rev. 88: 701–744. doi: 10.1111/brv.12029. / Mucina L (2018) Vegetation survey and classification of subtropical forests of southern Africa. Springer, Cham.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
