--- a/_EFGs/T3.3.md
+++ b/_EFGs/T3.3.md
@@ -15,6 +15,10 @@ These mixed graminoid shrublands are restricted to cool temperate maritime envir
 
 Unlike most other heathlands, these ecosystems have an overall water surplus, though sometimes with small summer deficits. Mild summers and cold winters with periodic snow are tempered by maritime climatic influences. A short daylength and low solar angle limits energy influx at the highest latitudes. Severe coastal storms with high winds occur periodically. Acid soils, typically with high humic content in upper horizons, are often limited in N & P. Low intensity fires recur at decadal time scales or rarely.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Boreal and cool temperate coasts of western Europe and America, Azores, Magellanic region of South America, mostly at latitudes >40° latitude except where transitional with warm temperate heaths (e.g. France-Spain).
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Aerts R, Heil GW (1993) Heathlands: patterns and processes in a changing environment. Kluwer Academic Publishing. / Loidi J, Biurrun I, Juan Antonio Campos JA, García-Mijangos I, Herrera M (2010) A biogeographical analysis of the European Atlantic lowland heathlands. Journal of Vegetation Science 21: 832–842.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
