--- a/_EFGs/T4.1.md
+++ b/_EFGs/T4.1.md
@@ -15,6 +15,10 @@ These grassy woodlands and grasslands are dominated by C4 stoloniferous, rhizoma
 
 Trophic savannas like pyric savannas are driven by seasonal climates, but generally occupy environmental niches with lower rainfall and higher soil fertility. A high annual rainfall deficit of 400mm to more than 1800mm. Annual rainfall generally varies from 300mm to 700mm, always with strong seasonal (winter) drought, but these savanna types are restricted to landscapes with sufficient water bodies (rivers, lakes) to sustain high densities of large mammals. Temperatures are warm-hot with low-moderate variability through the year. Low intensity fires have return intervals of 5-50 years, depending on animal densities and inter-annual rainfall variation, usually after the growing season, removing much of the remaining biomass not consumed by herbivores. Soils are moderately fertile and often have a significant clay component.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Seasonal tropics and subtropics of Africa and Asia.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Archibald S, Hempson GP (2016) Competing consumers: contrasting the patterns and impacts of fire and mammalian herbivory in Africa. Phil Trans R Soc B. 371: 20150309. / Hempson GP, Archibald S, Bond WJ, Ellis RP, Grant CC, Kruger FJ, et al. (2015) Ecology of grazing lawns in Africa. Biological Reviews 90: 979–994.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
