--- a/_EFGs/T4.2.md
+++ b/_EFGs/T4.2.md
@@ -15,6 +15,10 @@ contributors: CER Lehmann / A Etter / DA Keith
 
 An overall rainfall deficit up to c. 1200mm or a modest surplus of up to 500mm, always has a strong seasonal (winter) drought with continuously warm-hot temperatures through the year. Mean annual rainfall varies mainly from 650mm to 1500mm. Subdecadal fire regimes of surface fires occur throughout the dry season, while canopy fires occur rarely late in the dry season. Soils are of low-moderate fertility, often with high Fe and Al.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Seasonally dry tropics and subtropics of the Americas, Australia, Asia and Africa.
@@ -25,7 +29,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 
 ## References
 ### Text references
-* Furley PA (1999) The nature and diversity of neotropical savanna vegetation with particular reference to the Brazilian cerrados. Global Ecology and Biogeography 8, 223-241. / Lehmann CER, Anderson TM, Sankaran M, Higgins SI, Archibald S, Hoffmann WA, et al. (2014). Savanna vegetation-fire-climate relationships differ among continents. Science 343, 548-552. 
+* Furley PA (1999) The nature and diversity of neotropical savanna vegetation with particular reference to the Brazilian cerrados. Global Ecology and Biogeography 8, 223-241. / Lehmann CER, Anderson TM, Sankaran M, Higgins SI, Archibald S, Hoffmann WA, et al. (2014). Savanna vegetation-fire-climate relationships differ among continents. Science 343, 548-552.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
