--- a/_EFGs/T5.2.md
+++ b/_EFGs/T5.2.md
@@ -1,5 +1,5 @@
 ---
-name: T5.2 Succulent or Thorny deserts and semi-deserts 
+name: T5.2 Succulent or Thorny deserts and semi-deserts
 biome: T5 Deserts and semi-deserts
 realm: Terrestrial
 code: T5.2
@@ -16,8 +16,11 @@ These deserts are characterised by long-lived perennial plants, many with spines
 # Key-ecological-drivers
 
 
-These systems occur in subtropical arid climates with large overall water deficits. Precipitation is  5-20% of potential evapotranspiration, but exhibits low interannual variability relative to other desert systems.  Interannual pulses of surplus are thus infrequent and atmospheric moisture from fogs may contribute significantly to available water. Temperatures are hot with relatively large diurnal ranges, but seasonal variation is less than in other deserts, with very hot summers and mild winters. Substrates are stony and produce soils of moderate to low fertility. Thorny deserts are generally not fire-prone. 
+These systems occur in subtropical arid climates with large overall water deficits. Precipitation is  5-20% of potential evapotranspiration, but exhibits low interannual variability relative to other desert systems.  Interannual pulses of surplus are thus infrequent and atmospheric moisture from fogs may contribute significantly to available water. Temperatures are hot with relatively large diurnal ranges, but seasonal variation is less than in other deserts, with very hot summers and mild winters. Substrates are stony and produce soils of moderate to low fertility. Thorny deserts are generally not fire-prone.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
 
 # Distribution
 
@@ -34,4 +37,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Shmida A, Evenari M, Noy-Meir I (1986) Hot desert ecosystems: an integrated view.  In: Hot deserts and arid shrublands. (Eds. M Evenari, I Noy Meir, DW Goodall), pp. 379-387. Ecosystems of the World, Vol. 12b. Elsevier, Amsterdam.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
