--- a/_EFGs/T6.1.md
+++ b/_EFGs/T6.1.md
@@ -15,6 +15,10 @@ In these icy systems, extreme cold and periodic blizzards limit productivity and
 
 Permanent but dynamic ice cover accumulates by periodic snow fall and is reduced in summer by melting, sublimation and calving in the ablation zone. Slow lateral movement occurs downslope or outwards from ice cap centres, with associated cracking. Precipitation may average several metres per year on montane glaciers or less than a few hundred millimetres on extensive ice sheets. Surface temperatures are extremely cold in winter (commonly -60°C in Antarctica) but may rise above 0°C in summer. Desiccating conditions occur during high winds or when water is present almost entirely in solid form. Nutrients, especially N, are extremely scarce, the main inputs being glacial moraines, aerosols, and seawater (in sea ice), which may be supplemented locally by guano. Below the ice, temperatures are less extreme, there is greater contact between ice, water and rock (enhancing nutrient supply), a diminished light intensity and redox potential tends towards anoxic conditions.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Polar regions and high mountains in the western Americas, central Asia, Europe and New Zealand, covering approximately 10% of Earth's surface.
@@ -25,7 +29,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 
 ## References
 ### Text references
-* Anesio AM, Laybourn-Parry J (2012) Glaciers and ice sheets as a biome. Trends in Ecology and Evolution 27, 219-225. 
+* Anesio AM, Laybourn-Parry J (2012) Glaciers and ice sheets as a biome. Trends in Ecology and Evolution 27, 219-225.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
