--- a/_EFGs/T6.2.md
+++ b/_EFGs/T6.2.md
@@ -15,6 +15,10 @@ Low biomass systems with very low productivity constrained by extreme cold, desi
 
 Extremely cold winters with wind-chill that may reduce temperatures below -80°C (in Antarctica). In contrast, insolation and heat absorption on rocky substrates may increase summer temperatures substantially above 0°C. Together with the impermeable substrate and intermittently high winds, exposure to summer insolation may produce periods of extreme water deficit punctuated by saturated conditions associated with meltwater and seepage. Periodic burial by snow reduces light availability, while mass movement through landslides, avalanches or volcanic eruptions maintain substrate instability and destroy biomass, limiting the persistence of biota.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Permanently ice-free areas of Antarctica, Greenland, the Arctic circle, and high mountains in the western Americas, central Asia, Europe, Africa and New Zealand.
@@ -25,7 +29,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 
 ## References
 ### Text references
-* Chown SL, Clarke A, Fraser CI, Cary SC, Moon KL, McGeoch MA (2015) The changing form of Antarctic Biodiversity. Nature 522: 431-438.  / Convey P, Stevens PI (2007) Antarctic Biodiversity. Science 317: 1877-1878.  
+* Chown SL, Clarke A, Fraser CI, Cary SC, Moon KL, McGeoch MA (2015) The changing form of Antarctic Biodiversity. Nature 522: 431-438.  / Convey P, Stevens PI (2007) Antarctic Biodiversity. Science 317: 1877-1878.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
