--- a/_EFGs/T6.4.md
+++ b/_EFGs/T6.4.md
@@ -15,6 +15,10 @@ Treeless mountain systems are dominated variously by grasses, herbs or low shrub
 
 Winters are long and cold, while summers are short and mild. Seasonal snow up to several metres deep provides insulation to over-wintering plants and animals. Severe frosts and desiccating winds characterise the spring thaw and exposed ridges and slopes. Severe storms may result from orographic-atmospheric instability. Typically there is a large precipitation surplus, but deficits occur in some regions. Steep elevational gradients, variation in microtopography and aspect promote microclimatic heterogeneity. Steep slopes are subjected to periodic mass movements, which destroy surface vegetation.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Mountains in the temperate and boreal zones of the Americas, Europe, central Eurasia, west and north Asia, Australia and New Zealand.
@@ -28,4 +32,3 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 * Körner C (2004) Mountain biodiversity: its causes and function.  Ambio,  Special Report Number 13. The Royal Colloquium: Mountain Areas: A Global Resource, pp. 11-17. Springer, Berlin.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
