--- a/_EFGs/T7.3.md
+++ b/_EFGs/T7.3.md
@@ -15,6 +15,10 @@ These moderate to high productivity autotrophic systems are established by trans
 
 High to moderate natural availability of water (from at least seasonally high rainfall) and nutrients (from fertile soils) is supplemented by human inputs of fertiliser or mulch, landscape drainage modifications (surface earthworks) and in intensively managed systems, irrigation. Temperatures are mild to warm, at least seasonally. Artificial disturbance regimes involving complete or partial removal of biomass, and soil turnover are implemented at subdecadal to multidecadal frequencies.
 
+# Diagramatic assembly model
+
+{% include DAM.html %}
+
 # Distribution
 
 Tropical to cool temperate humid climatic zones or river flats in dry climates across south sub-Saharan and Mediterranean Africa, Europe, Asia, southern Australasia, Oceania and the Americas.
@@ -25,7 +29,6 @@ Terrestrial ecoregions (Dinerstein et al. 2017) containing major or minor occurr
 
 ## References
 ### Text references
-* Kanninen M (2010) Plantation forests: global perspectives. In: ‘Ecosystem goods and services from plantation forests’ (Eds. J Bauhus, PJ van der Meer, M Kanninen), pp1-15. Earthscan, London. / Monfreda CN, Ramankutty N, Foley JA (2008) Farming the planet: 2. Geographic distribution of crop areas, yields, physiological types, and net primary production in the year 2000. Global Biogeochemical Cycles 22: GB1022. 
+* Kanninen M (2010) Plantation forests: global perspectives. In: ‘Ecosystem goods and services from plantation forests’ (Eds. J Bauhus, PJ van der Meer, M Kanninen), pp1-15. Earthscan, London. / Monfreda CN, Ramankutty N, Foley JA (2008) Farming the planet: 2. Geographic distribution of crop areas, yields, physiological types, and net primary production in the year 2000. Global Biogeochemical Cycles 22: GB1022.
 ### Map References
 * Dinerstein E, Olson D, Joshi A, Vynne C, Burgess ND, Wikramanayake E, Hahn N, Palminteri S, Hedao P, Noss R, Hansen M, Locke H, Ellis EE, Jones B, Barber CV, Hayes R, Kormos C, Martin V, Crist E, Sechrest W, Price L, Baillie JEM, Weeden D, Suckling K, Davis C, Sizer N, Moore R, Thau D, Birch T, Potapov P, Turubanova S, Tyukavina A, de Souza N, Pintea L, Brito JC, Llewellyn Barnekow Lillesø JP, van Breugel P, Graudal L, Voge M, Al-Shammari KF, Saleem M (2017) An Ecoregion-Based Approach to Protecting Half the Terrestrial Realm, BioScience 67: 534–545.
-
